--- a/src/views/header.html
+++ b/src/views/header.html
@@ -1,5 +1,39 @@
-<header>
+<header class="body__header">
 
-    <h1>Header principal.</h1>
+    <div class="header__zonaLogo">
+   
+            <a href="#" class="zonaLogo__logo">
+                <img src="assets/images/logo2_sm.png" alt="logo web">
+                
+            </a>
+
+  
+            <a href="#" class="zonaLogo__titulo max-height_centered">Titulo de Prueba</a>
+
+
+
+    </div>
+    <nav class="header__zonaNav bold_bg_separada">
+
+
+        <a href="./index.html" class="zonaNav__nav_item max-height_centered">
+            <span class="z-10">Inicio</span>
+            <div class="link-hover -z-10"></div>
+        </a>
+        <a href="./programacion.html" class="zonaNav__nav_item max-height_centered">
+
+            <span>Programación</span>
+            <div class="link-hover -z-10"></div>
+
+        </a>
+        <a href="./sobre_mi.html" class="zonaNav__nav_item max-height_centered">
+            <span class="z-10">Sobre mí</span>
+            <div class="link-hover -z-10"></div>
+        </a>
+        
+    </nav>
+<div class="header__separador"></div>
+    
 
 </header>
+<script type="module" src="./assets/scripts/cambiar_active.js"></script>
