--- a/src/assets/styles/layouts/_home.scss
+++ b/src/assets/styles/layouts/_home.scss
@@ -70,4 +70,13 @@ a {
   height: 100%;
   width: 100%;
   opacity: 0.6;
+
+  .imagen-fondo__filtro {
+
+    background-color: black;
+    height: 100%;
+    width: 100%;
+    opacity: .6;
+
+  }
 }
