--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -25,6 +25,9 @@
 
 @import "layouts/home";
 @import "layouts/header";
+@import "layouts/index_main";
+@import "layouts/login_main";
+
 
 /**
  * Do NOT include anything else in this file!
