--- a/src/views/header.html
+++ b/src/views/header.html
@@ -1,17 +1,11 @@
 <header class="body__header">
 
     <div class="header__zonaLogo">
-   
-            <a href="#" class="zonaLogo__logo">
-                <img src="assets/images/logo2_sm.png" alt="logo web">
-                
-            </a>
 
-  
-            <a href="#" class="zonaLogo__titulo max-height_centered">Titulo de Prueba</a>
-
-
-
+        <a href="#" class="zonaLogo__logo">
+            <img src="assets/images/logo2_sm.png" alt="logo web">
+        </a>
+        <a href="#" class="zonaLogo__titulo max-height_centered">Titulo de Prueba</a>
     </div>
     <nav class="header__zonaNav bold_bg_separada">
 
@@ -21,19 +15,22 @@
             <div class="link-hover -z-10"></div>
         </a>
         <a href="./programacion.html" class="zonaNav__nav_item max-height_centered">
-
             <span>Programación</span>
             <div class="link-hover -z-10"></div>
-
         </a>
         <a href="./sobre_mi.html" class="zonaNav__nav_item max-height_centered">
             <span class="z-10">Sobre mí</span>
             <div class="link-hover -z-10"></div>
         </a>
-        
+
+        <a href="./login.html" class="zonaNav__nav_item max-height_centered">
+            <img class="z-10" src="assets/images/login.png" alt="login"/>
+            <div class="link-hover -z-10"></div>
+        </a>
+
     </nav>
-<div class="header__separador"></div>
-    
+    <div class="header__separador"></div>
+
 
 </header>
 <script type="module" src="./assets/scripts/cambiar_active.js"></script>
