--- a/src/views/login_main.html
+++ b/src/views/login_main.html
@@ -4,34 +4,33 @@
 
 
         <form action="#" class="caja-login__form-login">
-            <div class="form-login__titulo">
-                INICIAR SESIÓN
+            <div class="form-login__div-titulo">
+                <span>INICIAR SESIÓN</span>
             </div>
             <div class="form-login__div-user-pass">
                 <div class="div-user-pass__div-user">
-                    <label id="label-user" for="input-user"
-                        class="form-login__user-label">USUARIO</label>
+                    <label id="label-user" for="input-user" class="form-login__user-label">USUARIO</label>
                     <input id="input-user" name="input-user" type="text" class="form-login__user-input"
                         placeholder="NOMBRE DE USUARIO">
                 </div>
                 <div class="div-user-pass__div-pass">
-                    <label id="label-pass" for="input-pass"
-                        class="form-login__pass-label">CONTRASEÑA</label>
+                    <label id="label-pass" for="input-pass" class="form-login__pass-label">CONTRASEÑA</label>
                     <input id="input-pass" name="input-pass" type="text" class="form-login__pass-input"
                         placeholder="CONTRASEÑA">
                 </div>
             </div>
-            <div class="form-login__div-other-logins">
-                <div class="div-other-logins__google logo-social">G</div>
-                <div class="div-other-logins__fb logo-social">F</div>
-                <div class="div-other-logins__xbox logo-social">X</div>
-                <div class="div-other-logins__apple logo-social">A</div>
+            <div class="form-login__div-olvido-pass">
+                <a href="#">
+                    <span>¿Has olvidado la contraseña?</span>
+                </a>
             </div>
-            <div class="form-login__div-mantener-sesion">
+            <div class="form-login__div-boton-acceder">
+                <button class="boton-acceder__boton" type="submit">
 
-            </div>
-            <div class="form-login__boton-acceder">
+                    <img src="assets/images/flecha.png" alt="Enviar">
+                    <div class="link-hover"></div>
 
+                </button>
             </div>
         </form>
     </section>
