adicion de carrusel

--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -27,6 +27,8 @@
 @import "layouts/header";
 @import "layouts/index_main";
 @import "layouts/login_main";
+@import "layouts/sobre_mi_main";
+@import "layouts/programacion_main";
 
 
 /**
